syntax = "proto3";
option go_package = "./";
package pb;
 
message Order {
    message OrderedProduct {
        string id = 1;
        string name = 2;
        string description = 3;
        double price = 4;
        uint32 quantity = 5;
    }

    string id = 1;
    bytes createdAt = 2;
    string accountId = 3;
    double totalPrice = 4;
    repeated OrderedProduct products = 5;
} 

message PostOrderRequest {
        message OrderedProduct {
        string productId = 1;
        uint32 quantity = 2;
    } 
    string accountId = 3;
    repeated OrderedProduct products = 4;
}

message PostOrderResponse {
    Order order = 1;
}

message GetOrderRequest {
    string id = 1;
}

message GetOrderResponse {
    Order order = 1;
}

message GetOrdersForAccountRequest {
    string accountId = 1;
}

message GetOrdersForAccountResponse {
    repeated Order orders = 1;
}

service OrderService {
    rpc PostOrder(PostOrderRequest) returns (PostOrderResponse){};
    rpc GetOrder(GetOrderRequest) returns (GetOrderResponse){};
    rpc GetOrdersForAccount(GetOrdersForAccountRequest) returns (GetOrdersForAccountResponse){};

}